--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
       "typescript": "3.3.3333"
    },
    "dependencies": {
-      "typeorm": "0.2.24",
-      "reflect-metadata": "^0.1.10",
-      "pg": "^7.3.0",
+      "@types/bcrypt": "^3.0.0",
+      "bcrypt": "^5.0.0",
+      "body-parser": "^1.18.1",
       "express": "^4.15.4",
-      "body-parser": "^1.18.1"
+      "pg": "^7.3.0",
+      "reflect-metadata": "^0.1.10",
+      "typeorm": "0.2.24"
    },
    "scripts": {
       "start": "ts-node src/index.ts"
