--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
    },
    "dependencies": {
       "@types/bcrypt": "^3.0.0",
+      "@types/cors": "^2.8.9",
       "bcrypt": "^5.0.0",
       "body-parser": "^1.18.1",
+      "cors": "^2.8.5",
       "express": "^4.15.4",
       "pg": "^7.3.0",
       "reflect-metadata": "^0.1.10",
